<resources>
    <string name="app_name">Excy</string>
    <string name="title_play_activity">Play</string>
    <string name="title_login_activity">Login</string>
    <string name="title_signup_activity">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="bust_play">burst play</string>
    <string name="set_your_time">set your\ntime</string>
    <string name="time_remaining">time\nremaining</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="set_your_intervals">set your\nintervals</string>
    <string name="intervals">intervals\n</string>
    <string name="slow">slow</string>
    <string name="fast">fast</string>
    <string name="forwards">forwards</string>
    <string name="backwards">backwards</string>
    <string name="slow_it_down">slow it down</string>
    <string name="push_yourself">push yourself</string>
    <string name="start_button">start</string>
    <string name="pause_button">pause</string>
    <string name="stop_button">stop</string>
    <string name="warmup">Warm Up</string>
    <string name="skip_button">skip</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="exercise_for_busy_lives">Exercise for Busy Lives</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_message">Please enter a valid email below to reset your password.</string>
    <string name="reset">RESET</string>
    <string name="enter_valid_email">Please enter a valid email.</string>
    <string name="email_sent">Email sent.</string>
    <string name="email_sent_failed">Failed to send email.</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight (lbs)</string>
    <string name="height">Height (inches)</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="have_an_account">Have an account?</string>
    <string name="time">time</string>
    <string name="power">power</string>
    <string name="starting_zone">starting zone</string>
    <string name="target_zone">target zone</string>
    <string name="friend_since">friend since</string>
    <string name="quick_stats">Quick Stats</string>
    <string name="healthy_is">Healthy is...</string>
    <string name="my_goals">My Goals:</string>
    <string name="calories_a_week">calories a week</string>
    <string name="workouts_a_week">workouts a week</string>
    <string name="my_inspiration">My Inspiration:</string>
    <string name="recent_history">Recent History</string>
    <string name="grant_perm_to_load_images">Can not load images without permission being granted.</string>
    <string name="change_image">Change image</string>
    <string name="sign_me_up">Sign me up to be among the first to hear about new things with excy</string>
    <string name="grant_perm_to_choose_images">Can not choose images without permission being granted.</string>
    <string name="i_will_burn">I will burn</string>
    <string name="colories_every_week">calories every week</string>
    <string name="i_will_workout">I will workout</string>
    <string name="times_a_week">times a week</string>
    <string name="select_images">Select a few images that will inspire you</string>
    <string name="image_1">image 1</string>
    <string name="image_2">image 2</string>
    <string name="image_3">image 3</string>
    <string name="log_out">Log Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="healthy_desc_placeholder">What does being healthy mean to you?</string>
    <string name="feedback_way_to_go">Way to go! You are doing good today!</string>
    <string name="feedback_please_help">Please help the Excy team build the best exercise experience by telling us a little more about your workout.</string>
    <string name="feedback_rate_experience">Using the slider below, please let us know how you rate today\'s workout experience.</string>
    <string name="feedback_location">Using the slider below, please let us know where you worked out today.</string>
    <string name="feedback_how_you_feel">Using the slider below, what best describes how you feel after today\'s excy workout?.</string>
    <string name="feedback_btn_submit">submit</string>
    <string name="feedback_btn_complete">complete</string>
    <string name="more_base_frag">MORE BASE FRAG</string>
    <string name="learn_exercises">LEARN EXERCISES</string>
    <string name="watch_workouts">WATCH WORKOUTS</string>
    <string name="know_zones">KNOW THE ZONES</string>
    <string name="tips">TIPS</string>
    <string name="tip01">Exercise While Watching TV</string>
    <string name="tip02">Take Excy Anywhere for Anytime Exercise</string>
    <string name="tip03">Get More Active At Work</string>
    <string name="tip04">Hit Excy Hard for Total Efficiency</string>
    <string name="tip05">Do 10 Short Excy Bursts Throughout the Day</string>
    <string name="tip06">Multi-Task Excy Fitness to Fit Anywhere</string>
    <string name="tip07">Take Excy Outside</string>
    <string name="tip08">Use Excy To Do Strengthening Exercises</string>
    <string name="tip09">Excy with Others</string>
    <string name="tip10">Go Barefoot with Excy</string>
    <string name="tip11">Excy Cycle Your Upper Body</string>
    <string name="tip12">Workout on the Floor with Excy</string>
    <string name="tip13">Vary Your Excy Workouts</string>
    <string name="tip14">Increase Your Weekly Cardiac Output</string>
    <string name="tip15">Make Exercise a Habit and Be Consistent</string>
    <string name="tip16">Take a Leisure Excy Spin</string>
    <string name="tip17">Use Excy to Train for Swimming</string>
    <string name="tip01Link">"http://excy.com/2015/12/29/easily-exercise-with-excy-while-watching-tv/"</string>
    <string name="tip02Link">"http://excy.com/2015/11/17/take-excy-anywhere-for-anytime-exercise/"</string>
    <string name="tip03Link">"http://excy.com/2015/11/20/get-more-active-at-work/"</string>
    <string name="tip04Link">"http://excy.com/2015/12/09/hiit-excy-hard-for-total-efficiency/"</string>
    <string name="tip05Link">"http://excy.com/2016/02/07/excy-info-do-10-short-exercise-cycling-bursts-throughout-the-day/"</string>
    <string name="tip06Link">"http://excy.com/2016/01/08/multi-task-excy-fitness-to-fit-anywhere/"</string>
    <string name="tip07Link">"http://excy.com/2015/11/20/take-the-excy-portable-cycling-system-outside/"</string>
    <string name="tip08Link">"http://excy.com/2015/11/09/use-excy-to-do-strengthening-exercises/"</string>
    <string name="tip09Link">"http://excy.com/2015/11/11/excy-with-others-and-be-a-positive-role-model-to-those-around-you/"</string>
    <string name="tip10Link">"http://excy.com/2015/11/05/go-barefoot-with-the-excy-portable-exercise-cycle/"</string>
    <string name="tip11Link">"http://excy.com/2015/11/03/excy-cycle-your-upper-body-like-upper-body-ergometer/"</string>
    <string name="tip12Link">"http://excy.com/2015/10/29/workout-on-the-floor-with-the-excy-portable-exercise-cycle/"</string>
    <string name="tip13Link">"http://excy.com/2015/10/26/vary-your-excy-portable-total-body-cycle-workouts/"</string>
    <string name="tip14Link">"http://excy.com/2015/11/02/increase-your-weekly-cardiac-output/"</string>
    <string name="tip15Link">"http://excy.com/2015/11/15/make-exercise-a-habit-and-be-consistent/"</string>
    <string name="tip16Link">"http://excy.com/2015/11/18/take-excy-for-a-leisure-spin/"</string>
    <string name="tip17Link">"http://excy.com/2015/10/30/use-excy-to-train-for-swimming/"</string>
    <string name="armCandyYoutubeLink">https://www.youtube.com/watch?v=0eONwwRUIJc</string>
    <string name="superCycleYoutubeLink">https://www.youtube.com/watch?v=tSRh26o3zaI</string>
    <string name="cycleLegYoutubeLink">https://www.youtube.com/watch?v=aIxytWycNhg</string>
    <string name="coreFloorYoutubeLink">https://www.youtube.com/watch?v=RA-dtZcF75c</string>
    <string name="armBlastYoutubeLink">https://www.youtube.com/watch?v=4k7JUFgF57M</string>
    <string name="ultimateArmLegYoutubeLink">https://www.youtube.com/watch?v=QnwdAfD3XLI</string>
    <string name="resume_continue">"Continue?"</string>
    <string name="finish_strong">"healthy is… finishing strong!"</string>
    <string name="resume">"resume"</string>
    <string name="exit">"exit"</string>
    <string name="track_results_title">"Track results?"</string>
    <string name="track_results_message">"Please take a moment to track results to monitor your progress."</string>
    <string name="track">"TRACK"</string>
    <string name="cancel">"CANCEL"</string>
    <string name="warm_up">WARM UP</string>
    <string name="skip">SKIP</string>
    <string name="warm_up_title">Would you like to warm up?</string>
    <string name="warm_up_message">A quick 2 minute warm up can really enhance your workout experience and is highly recommended for optimal health</string>
    <string name="enter">ENTER</string>
    <string name="min_temp_title">Minimum Temperature</string>
    <string name="min_temp_message">enter the current temperature on the excy thermometer</string>
    <string name="max_temp_title">Maximum Temperature</string>
    <string name="max_temp_message">enter the current temperature on the excy thermometer</string>
    <string name="dont_have_an_excy"><a href="http://www.excy.com">Don\'t have an Excy?</a></string>
    <string name="interval_workout">Interval Workout</string>
    <string name="minimum">min:</string>
    <string name="maximum">max:</string>
    <string name="bottom_nav_view_play">play</string>
    <string name="bottom_nav_view_workouts">workouts</string>
    <string name="bottom_nav_view_me">me</string>
    <string name="bottom_nav_view_more">more</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="login_failed">Unable to sign in.</string>
    <string name="creating_account">Creating your account...</string>
    <string name="please_enter_email_password">Please enter in an email and password.</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="workout1">Arm Candy - 7 min arm strength workout</string>
    <string name="workout2">Super Cycle Cardio - 23 min high intensity interval</string>
    <string name="workout3">Cycle Leg Blast - 15 min interval spin</string>
    <string name="workout4">Core Floor Explosion - 10 min core training</string>
    <string name="workout5">Arm Blast - 10 min interval arm spin</string>
    <string name="workout6">Ultimate Arm &amp; Leg Toning - 7 min arm strength workout</string>
    <string name="arms1">What Are the Benefits of an Upper Body Ergometer Like Excy?</string>
    <string name="arms2">How do I use Excy as an Upper Body Ergometer from the Floor?</string>
    <string name="arms3">How do I use Excy as an Upper Body Ergometer on the Table?</string>
    <string name="arms4">How Do I Use Excy from the Side Profile for Upper Body Range of Motion?</string>
    <string name="arms5">What Height Should I use Excy in for Hand Cycling and to Focus on Range of Motion?</string>
    <string name="arms6">How do I use Excy for Curls and Biceps?</string>
</resources>