<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.excy.excy.activities.LoginActivity">

    <ImageView
        android:layout_width="192dp"
        android:layout_height="130dp"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:src="@drawable/excy_logo_final_white_new"
        android:id="@+id/ivExcyLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:layout_below="@+id/ivExcyLogo"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/exercise_for_busy_lives"
        android:textColor="@color/white"
        android:id="@+id/tvExerciseForBusyLives"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:id="@+id/inputLayoutEmail"
        android:layout_below="@id/tvExerciseForBusyLives"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        hintTextAppearance="@style/FloatingLabelHintText">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginEmail"
            android:hint="@string/user_email"
            android:textColor="@color/white"
            android:theme="@style/FloatingLabelEditText"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:id="@+id/inputLayoutPassword"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        hintTextAppearance="@style/FloatingLabelHintText"
        android:layout_below="@+id/inputLayoutEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginPassword"
            android:hint="@string/user_password"
            android:textColor="@color/white"
            android:theme="@style/FloatingLabelEditText"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutPassword"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dont_have_an_excy"
        android:textColorLink="@color/white"
        android:linksClickable="true"
        android:id="@+id/tvLink"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/llSignUp"
        android:layout_below="@+id/tvForgotPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:id="@+id/tvDontHaveAnAccount"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:id="@+id/btnSignUp"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding_bottom"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:id="@+id/tvForgotPassword"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />
</RelativeLayout>
